--- a/nginx/sites-enabled/rouboapi.conf
+++ b/nginx/sites-enabled/rouboapi.conf
@@ -30,6 +30,10 @@ server {
         uwsgi_pass  django;
         include     /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
     }
+
+    location /app {
+        alias /data/rouboworks/WEB/dashboard/dist/;
+    }
 }
 
 ## https
@@ -64,6 +68,9 @@ server {
     location /roubo {
         uwsgi_pass  django;
         include     /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
+    }
+    location /app {
+        alias /data/rouboworks/WEB/dashboard/dist/;
     }
 }
 
