更新dashboard的配置
Change-Id: Iecf8f0b05ea7334085110d73d2185464745de490

--- a/nginx/sites-enabled/rouboapi.conf
+++ b/nginx/sites-enabled/rouboapi.conf
@@ -31,8 +31,9 @@ server {
         include     /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
     }
 
-    location /app {
+    location /app/dashboard {
         alias /data/rouboworks/WEB/dashboard/dist/;
+        index index.html;
     }
 }
 
@@ -69,8 +70,9 @@ server {
         uwsgi_pass  django;
         include     /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
     }
-    location /app {
+    location /app/dashboard {
         alias /data/rouboworks/WEB/dashboard/dist/;
+        index index.html;
     }
 }
 
